core/cu29_derive/tests/compile_fail/copper_runtime/invalid_config_file.stderr
error: Failed to parse configuration: Error: Expected opening `[` at position 2:12
          context:None
 --> tests/compile_fail/copper_runtime/invalid_config_file.rs:3:1
  |
3 | #[copper_runtime(config = "config/invalid_config.ron")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `copper_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
